prodMetadata/src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>AIR_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AIR_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AIR Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ask_Objective__c</fullName>
        <label>Ask/Objective</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ask_for_Money__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ask for $$?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Briefing_Report_Complete__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Briefing Report Complete</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Briefing_Report_Link__c</fullName>
        <label>Briefing Report Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Briefing_Report_Needed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Briefing Report Needed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Account_SID__c</fullName>
        <label>SMS Account SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Auth_Token__c</fullName>
        <label>SMS Auth Token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Error_Code__c</fullName>
        <label>SMS Error Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Error_Message__c</fullName>
        <label>SMS Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Message_SID__c</fullName>
        <label>SMS SID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Sent_From__c</fullName>
        <label>SMS Sent From</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CnP_PaaS__SMS_Sent_To__c</fullName>
        <label>SMS Sent To</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>DB_Activity_Type__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package.  If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>IF(CONTAINS( Subject , &quot;Email&quot;), &quot;Email&quot;, IF(CONTAINS( Subject , &quot;Cold Call&quot;), &quot;Cold Call&quot;, IF(CONTAINS( Subject , &quot;Call&quot;), &quot;Call&quot;, IF(CONTAINS( Subject , &quot;Meeting&quot;), &quot;Meeting&quot;, IF(CONTAINS( Subject , &quot;On Site Visit&quot;), &quot;Site Visit&quot;, IF(CONTAINS( Subject , &quot;Quote&quot;), &quot;Send Letter/Quote&quot;, &quot;Other&quot;))))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Activity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Follow_up_Note_for_ED__c</fullName>
        <description>Note that will be sent upon save to Executive Director if &quot;Send Follow up to ED&quot; is checked</description>
        <inlineHelpText>Note that will be sent upon save to Executive Director if &quot;Send Follow up to ED&quot; is checked</inlineHelpText>
        <label>Follow up Note for ED</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Follow_up_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Follow-up Sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Goal_Ask__c</fullName>
        <label>Goal / Ask</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Invite_to_next_event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Invite to next event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invite_to_next_event_notes__c</fullName>
        <label>Invite to next event notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MA_Clean_City__c</fullName>
        <label>Clean City (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Country__c</fullName>
        <label>Clean Country (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_County__c</fullName>
        <label>Clean County (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_District__c</fullName>
        <label>Clean District (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Postal_Code__c</fullName>
        <label>Clean Postal Code (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_State__c</fullName>
        <label>Clean State (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Clean_Street__c</fullName>
        <label>Clean Street (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MA_Latitude__c</fullName>
        <label>Latitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Longitude__c</fullName>
        <label>Longitude (MapAnything)</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MA_Quality__c</fullName>
        <label>Quality (MapAnything)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>MA_Similarity_Level__c</fullName>
        <label>Similarity Level (MapAnything)</label>
        <length>254</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Needs_from_EO__c</fullName>
        <label>Needs from EO</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Really_TAC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked, this Activity is really just a stand-in for the Track a Call record for purposes of reporting and apps like Cirrus.  So when the user views the Activity, redirect to the TAC instead.</description>
        <inlineHelpText>If checked, this Activity is really just a stand-in for the Track a Call record for purposes of reporting and apps like Cirrus.  So when the user views the Activity, redirect to the TAC instead.</inlineHelpText>
        <label>This is really a Track a Call</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_Follow_up_to_PR__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send Follow up to PR</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Success_Story_Link__c</fullName>
        <description>Link to Success Story, which should be attached to Contact or Organization&apos;s record</description>
        <inlineHelpText>Link to Success Story, which should be attached to Contact or Organization&apos;s record</inlineHelpText>
        <label>Success Story Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Plan Task</label>
        <referenceTo>npsp__Engagement_Plan_Task__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>npsp__Engagement_Plan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Engagement Plan</label>
        <referenceTo>npsp__Engagement_Plan__c</referenceTo>
        <relationshipLabel>Tasks</relationshipLabel>
        <relationshipName>Tasks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__BaseObjectId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>MapAnything Base Object</label>
        <referenceTo>sma__MABaseObject__c</referenceTo>
        <relationshipLabel>Activities</relationshipLabel>
        <relationshipName>BaseObjectIds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sma__CheckOutAccuracy__c</fullName>
        <label>Check Out Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CheckOutDate__c</fullName>
        <label>Check Out Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>sma__CheckOutDistanceFromRecordMi__c</fullName>
        <label>Check Out Distance From Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CheckOutLatitude__c</fullName>
        <label>Check Out Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CheckOutLongitude__c</fullName>
        <label>Check Out Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CreatedLatitude__c</fullName>
        <label>Created Latitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CreatedLocationAccuracy__c</fullName>
        <label>Created Location Accuracy (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__CreatedLocationVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Created Location Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>sma__CreatedLongitude__c</fullName>
        <label>Created Longitude</label>
        <precision>18</precision>
        <scale>15</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__DistanceFromRecordFt__c</fullName>
        <formula>sma__DistanceFromRecordMi__c * 5280</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance from Record (ft)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__DistanceFromRecordKm__c</fullName>
        <formula>sma__DistanceFromRecordMi__c  * 1.60934</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance from Record (km)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__DistanceFromRecordM__c</fullName>
        <formula>sma__DistanceFromRecordKm__c * 1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Distance from Record (m)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__DistanceFromRecordMi__c</fullName>
        <label>Distance from Record (mi)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>sma__LayerId__c</fullName>
        <label>Layer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sma__TimeOnSiteMinutes__c</fullName>
        <formula>(sma__CheckOutDate__c -  CreatedDate) * 1440</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Time On Site (Minutes)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <listViews>
        <fullName>AllActivities</fullName>
        <filterScope>Team</filterScope>
        <label>All Activities</label>
    </listViews>
    <listViews>
        <fullName>MyActivities</fullName>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_Last_7_Days</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <label>Geopointe Activities (Last 7 Days)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_all</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <label>Geopointe Activities (all)</label>
    </listViews>
    <listViews>
        <fullName>geopointe__Geopointe_Activities_today</fullName>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.STATUS</columns>
        <columns>CORE.USERS.FULL_NAME</columns>
        <columns>TASK.LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>TASK.SUBJECT</field>
            <operation>startsWith</operation>
            <value>Geopointe:</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Geopointe Activities (today)</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>